scraper
complete algorithm to scrape investing.com and send it to kafka